--- a/Demo.PL/Views/Department/Index.cshtml
+++ b/Demo.PL/Views/Department/Index.cshtml
@@ -28,7 +28,7 @@
                         <td>@Department.Code</td>
                         <td>@Department.Name</td>
                         <td>@Department.DateOfCreation</td>
-                        <partial name="_ButtonsPartialView" model="@Department.Id"/>
+                        <partial name="_ButtonsPartialView" model="@Department.Id.ToString()"/>
                     </tr>
                 }
             </tbody>
